# querymind-ai

./: .gitignore  README.md  architecture_and_flow.md  assignment_03_sql_agent.md  main.py  pyproject.toml
backend/: .env.sample  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: observability.py
backend/app/services/: auth_service.py  cache.py  chat_service.py  classifier.py  compliance_shield.py  dialect_transpiler.py  email_service.py  executor.py  formatter.py  generator.py  llm_factory.py  retriever.py  schema_linker.py  security.py  validator.py
backend/qdrant_data/: meta.json
backend/qdrant_data/collection/few_shot_examples/: storage.sqlite
backend/scripts/: benchmark_set.json  evaluate.py  seed_hospital_billing.py  seed_hospital_examples.py  setup_auth.py  test_masking.py  test_ragas_compat.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: PasswordResetModal.tsx  navbar.tsx
frontend/src/components/ui/: dropdown-menu.tsx
frontend/src/context/: AuthContext.tsx
terraform/: main.tf  outputs.tf  variables.tf
