[project]
name = "text-2-sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt<4.0.0",
    "fastapi>=0.136.1",
    "langchain-aws>=1.4.6",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langfuse>=4.6.1",
    "mysql-connector-python>=9.6.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "qdrant-client>=1.17.1",
    "sqlglot>=30.7.0",
    "uvicorn>=0.46.0",
    "websockets<14.0",
]

[dependency-groups]
dev = [
    "datasets>=4.8.4",
    "faker>=40.15.0",
    "pandas>=3.0.2",
    "ragas>=0.4.3",
    "sentence-transformers>=5.4.1",
    "torch>=2.11.0",
]
